@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false


skinparam classAttributeIconSize 0

hide circle
hide methods


class "Agent" as agent{




}


class "VisitRequest" as VR{



}
class Client{
    id
    name
    phoneNumber
    email
}


class Property{
propertyID
type
location
area
distanceCenter
propertyDescription
photograph
}


VR "1.*" -- "1" Announcement : are scheduled to >
Client "1" -- "*" Property : purchase >
Property "1" -left- "1" Announcement: is the physical part of >
agent "1" -- "1.*" VR : revise >






@enduml